added itella logo and created local rep for needed files.

--- a/plugins/modenapaymentgateway/shipping/assets/modena-shipping.css
+++ b/plugins/modenapaymentgateway/shipping/assets/modena-shipping.css
@@ -1,7 +1,6 @@
 
 .mdn-shipping-selection, .mdn-shipping-selection-wrapper{
-    max-width: inherit;
-    width: inherit;
+
 }
 
 #mdn-shipping-select-box {
@@ -10,4 +9,20 @@
 }
 .select2-container--default .select2-results>.select2-results__options {
     max-height: 400px !important;
+}
+
+label[for="shipping_method_0_modena-shipping-itella-terminals"]::after {
+    content: url("logos/itella-logo.png");
+    display: block;
+    vertical-align: middle;
+    max-width: 40px;
+    height: auto;
+    float:right;
+    right: 30px;
+
+
+}
+
+.select2-selection__rendered {
+    text-align: center;
 }
