--- a/plugins/modenapaymentgateway/assets/css/modena-admin-style.css
+++ b/plugins/modenapaymentgateway/assets/css/modena-admin-style.css
@@ -2,8 +2,13 @@ fieldset label[for="woocommerce_modena_slice_enabled"],
 fieldset label[for="woocommerce_modena_direct_enabled"],
 fieldset label[for="woocommerce_modena_leasing_enabled"],
 fieldset label[for="woocommerce_modena_credit_enabled"],
+fieldset label[for="woocommerce_modena_credit_whitelabel_enabled"],
+fieldset label[for="woocommerce_modena_slice_whitelabel_enabled"],
+
 fieldset label[for="woocommerce_modena_slice_product_page_banner_enabled"],
 fieldset label[for="woocommerce_modena_direct_product_page_banner_enabled"],
+fieldset label[for="woocommerce_modena_slice_whitelabel_product_page_banner_enabled"],
+fieldset label[for="woocommerce_modena_credit_whitelabel_product_page_banner_enabled"],
 fieldset label[for="woocommerce_modena_leasing_product_page_banner_enabled"],
 fieldset label[for="woocommerce_modena_credit_product_page_banner_enabled"] {
     position: relative;
@@ -16,8 +21,13 @@ fieldset label[for="woocommerce_modena_slice_enabled"] input,
 fieldset label[for="woocommerce_modena_direct_enabled"] input,
 fieldset label[for="woocommerce_modena_leasing_enabled"] input,
 fieldset label[for="woocommerce_modena_credit_enabled"] input,
+fieldset label[for="woocommerce_modena_credit_whitelabel_enabled"] input,
+fieldset label[for="woocommerce_modena_slice_whitelabel_enabled"] input,
+
 fieldset label[for="woocommerce_modena_slice_product_page_banner_enabled"] input,
+fieldset label[for="woocommerce_modena_slice_whitelabel_product_page_banner_enabled"] input,
 fieldset label[for="woocommerce_modena_leasing_product_page_banner_enabled"] input,
+fieldset label[for="woocommerce_modena_credit_whitelabel_product_page_banner_enabled"] input,
 fieldset label[for="woocommerce_modena_direct_product_page_banner_enabled"] input,
 fieldset label[for="woocommerce_modena_credit_product_page_banner_enabled"] input {
     opacity: 0;
