--- a/plugins/modenapaymentgateway/assets/css/modena-checkout.css
+++ b/plugins/modenapaymentgateway/assets/css/modena-checkout.css
@@ -42,6 +42,7 @@
 
 .payment_method_modena_slice label,
 .payment_method_modena_business_leasing label,
+.payment_method_modena_click label,
 .payment_method_modena_credit label {
     display: inline-block;
     vertical-align: middle;
@@ -51,6 +52,7 @@
 .payment_method_modena_direct label img,
 .payment_method_modena_slice label img,
 .payment_method_modena_business_leasing label img,
+.payment_method_modena_click label img,
 .payment_method_modena_credit label img {
     margin-left: 0 !important;
 }
