added support and setiting option for only showing gateway to estonian billing customers.

--- a/plugins/trunk/assets/css/modena-admin-style.css
+++ b/plugins/trunk/assets/css/modena-admin-style.css
@@ -3,6 +3,11 @@ fieldset label[for="woocommerce_modena_direct_enabled"],
 fieldset label[for="woocommerce_modena_business_leasing_enabled"],
 fieldset label[for="woocommerce_modena_click_enabled"],
 fieldset label[for="woocommerce_modena_credit_enabled"],
+fieldset label[for="woocommerce_modena_slice_is_only_estonia"],
+fieldset label[for="woocommerce_modena_direct_is_only_estonia"],
+fieldset label[for="woocommerce_modena_business_leasing_is_only_estonia"],
+fieldset label[for="woocommerce_modena_click_is_only_estonia"],
+fieldset label[for="woocommerce_modena_credit_is_only_estonia"],
 fieldset label[for="woocommerce_modena_slice_product_page_banner_enabled"],
 fieldset label[for="woocommerce_modena_direct_product_page_banner_enabled"],
 fieldset label[for="woocommerce_modena_business_leasing_product_page_banner_enabled"],
@@ -19,6 +24,11 @@ fieldset label[for="woocommerce_modena_direct_enabled"] input,
 fieldset label[for="woocommerce_modena_business_leasing_enabled"] input,
 fieldset label[for="woocommerce_modena_click_enabled"] input,
 fieldset label[for="woocommerce_modena_credit_enabled"] input,
+fieldset label[for="woocommerce_modena_slice_is_only_estonia"] input,
+fieldset label[for="woocommerce_modena_direct_is_only_estonia"] input,
+fieldset label[for="woocommerce_modena_business_leasing_is_only_estonia"] input,
+fieldset label[for="woocommerce_modena_click_is_only_estonia"] input,
+fieldset label[for="woocommerce_modena_credit_is_only_estonia"] input,
 fieldset label[for="woocommerce_modena_slice_product_page_banner_enabled"] input,
 fieldset label[for="woocommerce_modena_business_leasing_product_page_banner_enabled"] input,
 fieldset label[for="woocommerce_modena_click_product_page_banner_enabled"] input,
