bug fix for checkout if payment is cancelled or rejected then route back to checkout page.

--- a/plugins/trunk/assets/css/modena-checkout.css
+++ b/plugins/trunk/assets/css/modena-checkout.css
@@ -73,3 +73,17 @@
     font-size: 0;
     color: transparent;
 }
+
+/*
+    uncomment code to hide Mtasku,
+    Visa and Mastercard card payments
+    in checkout
+*/
+
+/*
+
+#mdn_bl_option_MTASKU, #mdn_bl_option_MASTERCARD, #mdn_bl_option_VISA {
+    display: none;
+}
+
+*/
